initial checking, lots of bugs